--- a/timeblock-view.html
+++ b/timeblock-view.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Time Block View</title>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600&family=DM+Mono:wght@400;500&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-<style>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600&family=DM+Mono:wght@400;500&family=DM+Sans:wght@400;500;600&family=Playfair+Display:wght@400;600;700&family=Raleway:wght@300;400;600&family=Quicksand:wght@400;600;700&family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet"><style>
   :root {
     --sky-pale: #dff0f7;
     --sky: #a8d8ea;
@@ -26,114 +25,220 @@
     font-family: 'DM Sans', 'Noto Sans JP', sans-serif;
     background: var(--sky-pale);
     color: var(--text);
-    padding: 12px 16px;
+    padding: 16px 20px 20px;
     -webkit-font-smoothing: antialiased;
   }
 
+  /* ── ヘッダー ── */
   .header {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 10px;
+    align-items: flex-end;
+    gap: 20px;
+    margin-bottom: 18px;
   }
 
-  .date-label {
-    font-size: 12px;
-    color: var(--text-mid);
-    font-weight: 500;
+  .date-block { display: flex; flex-direction: column; gap: 3px; }
+
+  .date-main {
+    font-size: 24px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 600;
+    color: var(--brown);
+    line-height: 1;
+    letter-spacing: 0.02em;
   }
 
-  .current-time {
+  .date-sub {
     font-size: 11px;
-    font-family: 'DM Mono', monospace;
-    color: var(--brown-light);
+    color: var(--text-mid);
   }
 
-  /* ブロック一覧 横並び */
-  .blocks-row {
+  .divider {
+    width: 1.5px;
+    height: 36px;
+    background: var(--border);
+    border-radius: 1px;
+    margin-bottom: 2px;
+  }
+
+  .time-block { display: flex; flex-direction: column; gap: 2px; }
+
+  .time-main {
+    font-size: 38px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 600;
+    color: var(--brown);
+    line-height: 1;
+    letter-spacing: 0.02em;
+  }
+
+  .time-label {
+    font-size: 9px;
+    color: var(--text-light);
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+  }
+
+  .current-block-area {
+    margin-left: auto;
     display: flex;
-    gap: 6px;
-    flex-wrap: wrap;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 3px;
+    padding-bottom: 4px;
   }
 
-  .block-chip {
+  .current-block-name {
+    font-size: 15px;
+    font-weight: 600;
     display: flex;
     align-items: center;
-    gap: 6px;
-    padding: 6px 12px;
-    border-radius: 20px;
-    font-size: 12px;
-    font-weight: 500;
-    border: 1.5px solid transparent;
-    transition: all 0.3s ease;
-    white-space: nowrap;
+    gap: 7px;
   }
 
-  .block-chip.current {
-    transform: scale(1.08);
-    box-shadow: 0 2px 12px rgba(0,0,0,0.12);
-  }
-
-  .block-chip.past {
-    opacity: 0.35;
-  }
-
-  .block-chip.future {
-    opacity: 0.65;
-  }
-
-  .block-hour {
-    font-size: 10px;
-    font-family: 'DM Mono', monospace;
-    opacity: 0.7;
-  }
-
-  /* 現在インジケーター */
   .current-dot {
-    width: 6px;
-    height: 6px;
+    width: 7px;
+    height: 7px;
     border-radius: 50%;
     background: #e05a5a;
     animation: pulse 1.5s ease-in-out infinite;
-    flex-shrink: 0;
   }
   @keyframes pulse {
-    0%, 100% { box-shadow: 0 0 0 0 rgba(224,90,90,0.4); }
-    50% { box-shadow: 0 0 0 4px rgba(224,90,90,0); }
+    0%,100% { box-shadow: 0 0 0 0 rgba(224,90,90,0.5); }
+    50%      { box-shadow: 0 0 0 5px rgba(224,90,90,0); }
   }
 
-  /* 空状態 */
+  .current-block-time {
+    font-size: 10px;
+    font-family: 'DM Mono', monospace;
+    color: var(--text-light);
+  }
+
+
+  .timeline-wrap {
+    background: var(--white);
+    border-radius: var(--radius);
+    border: 1.5px solid var(--border);
+    overflow: hidden;
+  }
+
+  .hour-labels {
+    position: relative;
+    height: 18px;
+    background: color-mix(in srgb, var(--sky-pale) 60%, white);
+    border-bottom: 1px solid var(--border);
+  }
+
+  .hour-label-item {
+    position: absolute;
+    font-size: 9px;
+    font-family: 'DM Mono', monospace;
+    color: var(--text-light);
+    transform: translateX(-50%);
+    top: 4px;
+    white-space: nowrap;
+  }
+
+  .timeline-body {
+    position: relative;
+    height: 52px;
+  }
+
+  .grid-line {
+    position: absolute;
+    top: 0; bottom: 0;
+    width: 1px;
+    background: var(--border);
+    opacity: 0.6;
+  }
+
+  .tl-block {
+    position: absolute;
+    top: 7px; bottom: 7px;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 11px;
+    font-weight: 600;
+    border: 1.5px solid transparent;
+    overflow: hidden;
+    padding: 0 5px;
+    white-space: nowrap;
+    transition: all 0.3s ease;
+  }
+
+  .tl-block.past    { opacity: 0.3; }
+  .tl-block.future  { opacity: 0.65; }
+  .tl-block.current {
+    top: 3px; bottom: 3px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.13);
+    z-index: 2;
+  }
+
+  .tl-block-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
+  .now-line {
+    position: absolute;
+    top: 0; bottom: 0;
+    width: 2px;
+    background: #e05a5a;
+    z-index: 10;
+    border-radius: 1px;
+  }
+  .now-line::before {
+    content: '';
+    position: absolute;
+    top: -3px; left: -3px;
+    width: 8px; height: 8px;
+    border-radius: 50%;
+    background: #e05a5a;
+  }
+
   .empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 52px;
     font-size: 12px;
     color: var(--text-light);
-    padding: 8px 0;
-  }
-
-  /* ローディング */
-  .loading {
-    font-size: 11px;
-    color: var(--text-light);
-    padding: 8px 0;
   }
 </style>
 </head>
 <body>
 
 <div class="header">
-  <div class="date-label" id="dateLabel"></div>
-  <div class="current-time" id="currentTime"></div>
+  <div class="date-block">
+    <div class="date-main" id="dateMain"></div>
+    <div class="date-sub" id="dateSub"></div>
+  </div>
+  <div class="divider"></div>
+  <div class="time-block">
+    <div class="time-main" id="timeMain"></div>
+    <div class="time-label">NOW</div>
+  </div>
+  <div class="current-block-area" id="currentBlockArea"></div>
 </div>
 
-<div class="blocks-row" id="blocksRow">
-  <div class="loading">読み込み中...</div>
+<div class="timeline-wrap">
+  <div class="hour-labels" id="hourLabels"></div>
+  <div class="timeline-body" id="timelineBody">
+    <div class="empty">読み込み中...</div>
+  </div>
 </div>
 
 <script>
 const SUPABASE_URL = 'https://nbduyknklcwqbinvhoih.supabase.co';
-const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZHV5a25rbGN3cWJpbnZob2loIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE2NjMzNjUsImV4cCI6MjA4NzIzOTM2NX0.kzZYqBwfc8vpGszN2W3so2jURsZXlrve4KvUydYKIfA'; // ← 新しいキーを貼る
+const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5iZHV5a25rbGN3cWJpbnZob2loIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE2NjMzNjUsImV4cCI6MjA4NzIzOTM2NX0.kzZYqBwfc8vpGszN2W3so2jURsZXlrve4KvUydYKIfA';
 
 const DAYS_JP = ['日','月','火','水','木','金','土'];
+const TL_START = 6;
+const TL_END   = 24;
+const TL_HOURS = TL_END - TL_START;
 
 async function sbFetch(path) {
   const res = await fetch(`${SUPABASE_URL}/rest/v1/${path}`, {
@@ -162,62 +267,104 @@ function getTextColor(hex) {
   return (r*0.299 + g*0.587 + b*0.114) > 150 ? '#3a2e28' : '#ffffff';
 }
 
-function updateHeader() {
-  const d = new Date();
-  const dow = DAYS_JP[d.getDay()];
-  document.getElementById('dateLabel').textContent =
-    `${d.getMonth()+1}月${d.getDate()}日（${dow}）`;
-  document.getElementById('currentTime').textContent =
-    `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
+function hourToPercent(h) {
+  return ((h - TL_START) / TL_HOURS) * 100;
 }
 
-async function render() {
-  updateHeader();
-  const now = new Date();
-  const nowHour = now.getHours();
+function updateHeader(blocks) {
+  const d = new Date();
+  const dow = DAYS_JP[d.getDay()];
+  document.getElementById('dateMain').textContent = `${d.getMonth()+1}月${d.getDate()}日`;
+  document.getElementById('dateSub').textContent  = `${d.getFullYear()}年 （${dow}）`;
+  document.getElementById('timeMain').textContent =
+    `${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
 
-  let blocks = [];
-  try {
-    const rows = await sbFetch(`timeblocks?date=eq.${dateKey()}&select=*`);
-    if (rows && rows.length > 0) {
-      blocks = JSON.parse(rows[0].blocks_json || '[]');
-    }
-  } catch(e) {
-    console.error(e);
+  const nowHour = d.getHours();
+  const cur = blocks.find(b => b.hour === nowHour);
+  const area = document.getElementById('currentBlockArea');
+  if (cur) {
+    area.innerHTML = `
+      <div class="current-block-name">
+        <div class="current-dot"></div>
+        <span style="color:${cur.color}">${cur.label}</span>
+      </div>
+      <div class="current-block-time">${String(nowHour).padStart(2,'0')}:00 〜 ${String(nowHour+1).padStart(2,'0')}:00</div>`;
+  } else {
+    area.innerHTML = `<div class="current-block-time" style="color:var(--text-light)">予定なし</div>`;
   }
+}
 
-  const row = document.getElementById('blocksRow');
+function renderTimeline(blocks) {
+  const d = new Date();
+  const nowHour = d.getHours();
+  const nowMin  = d.getHours() * 60 + d.getMinutes();
+  const nowPct  = ((nowMin / 60 - TL_START) / TL_HOURS) * 100;
 
+  // 時間ラベル（偶数時間のみ）
+  let labelsHtml = '';
+  for (let h = TL_START; h <= TL_END; h += 2) {
+    labelsHtml += `<div class="hour-label-item" style="left:${hourToPercent(h)}%">${String(h).padStart(2,'0')}</div>`;
+  }
+  document.getElementById('hourLabels').innerHTML = labelsHtml;
+
+  const body = document.getElementById('timelineBody');
   if (blocks.length === 0) {
-    row.innerHTML = '<div class="empty">今日のブロックはまだ設定されていません</div>';
+    body.innerHTML = '<div class="empty">今日のブロックはまだ設定されていません</div>';
     return;
   }
 
-  row.innerHTML = blocks.map(b => {
+  let html = '';
+
+  // グリッド線（1時間ごと）
+  for (let h = TL_START; h <= TL_END; h++) {
+    html += `<div class="grid-line" style="left:${hourToPercent(h)}%"></div>`;
+  }
+
+  // ブロック
+  blocks.forEach(b => {
+    if (b.hour < TL_START || b.hour >= TL_END) return;
+    const left  = hourToPercent(b.hour);
+    const width = (1 / TL_HOURS) * 100;
     const isCurrent = b.hour === nowHour;
-    const isPast = b.hour < nowHour;
-    const textColor = getTextColor(b.color);
-    const bgColor = b.color + (isCurrent ? '55' : '28');
-    const borderColor = b.color + (isCurrent ? 'aa' : '55');
+    const isPast    = b.hour < nowHour;
+    const textColor   = getTextColor(b.color);
+    const bgColor     = b.color + (isCurrent ? '66' : '33');
+    const borderColor = b.color + (isCurrent ? 'cc' : '66');
+    let cls = 'tl-block' + (isCurrent ? ' current' : isPast ? ' past' : ' future');
 
-    let cls = 'block-chip';
-    if (isCurrent) cls += ' current';
-    else if (isPast) cls += ' past';
-    else cls += ' future';
-
-    return `<div class="${cls}" style="background:${bgColor};border-color:${borderColor};color:${textColor};">
-      ${isCurrent ? '<div class="current-dot"></div>' : ''}
-      <span>${b.label}</span>
-      <span class="block-hour">${String(b.hour).padStart(2,'0')}:00</span>
+    html += `<div class="${cls}"
+      style="left:${left}%;width:calc(${width}% - 2px);background:${bgColor};border-color:${borderColor};color:${textColor};">
+      <span class="tl-block-text">${b.label}</span>
     </div>`;
-  }).join('');
+  });
+
+  // 現在時刻ライン
+  if (nowPct >= 0 && nowPct <= 100) {
+    html += `<div class="now-line" style="left:${nowPct}%"></div>`;
+  }
+
+  body.innerHTML = html;
+}
+
+let cachedBlocks = [];
+
+async function render() {
+  try {
+    const rows = await sbFetch(`timeblocks?date=eq.${dateKey()}&select=*`);
+    cachedBlocks = (rows && rows.length > 0) ? JSON.parse(rows[0].blocks_json || '[]') : [];
+  } catch(e) { console.error(e); }
+  updateHeader(cachedBlocks);
+  renderTimeline(cachedBlocks);
+}
+
+function tick() {
+  updateHeader(cachedBlocks);
+  renderTimeline(cachedBlocks);
 }
 
 render();
-setInterval(() => {
-  updateHeader();
-  render();
-}, 60000);
+setInterval(tick, 60000);
+setInterval(render, 300000);
 </script>
 </body>
 </html>
