--- a/timeblock.html
+++ b/timeblock.html
@@ -7,18 +7,19 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600&family=DM+Mono:wght@400;500&family=DM+Sans:wght@400;500;600&display=swap" rel="stylesheet">
 <style>
   :root {
-    --sky-pale: #dff0f7;
+    --sky-pale: #eef7fc;
     --sky: #a8d8ea;
     --sky-mid: #7ec8e3;
-    --brown: #6b4f3a;
-    --brown-light: #a0785a;
-    --brown-pale: #f5ede8;
-    --text: #3a2e28;
-    --text-mid: #7a6560;
-    --text-light: #b0a09a;
-    --border: #d8e8f0;
+    --sky-light: #d6eef8;
+    --brown: #8b6f5e;
+    --brown-light: #c4a882;
+    --brown-pale: #f5ede6;
+    --text: #4a3728;
+    --text-mid: #9e7c6a;
+    --text-light: #c4a882;
+    --border: rgba(139,111,94,0.15);
     --white: #ffffff;
-    --radius: 10px;
+    --radius: 14px;
 
     /* ブロックカラー */
     --c-work:    #7ec8e3;
